--- a/app/views/messages/_sidebar_menu.html.erb
+++ b/app/views/messages/_sidebar_menu.html.erb
@@ -5,4 +5,7 @@
   <li>
   > <%= link_to '去发件箱', messages_path(:as => 'sender') %>
   </li>
+  <li class='seperate'>
+    > <%= link_to "返回个人首页", user_view_path(@user) %>
+  </li>
 </ul>
