--- a/public/stylesheets/formation_management.css
+++ b/public/stylesheets/formation_management.css
@@ -1,7 +1,24 @@
 h2{margin:2px 0}
+ul.sidebar_menu {
+    margin-bottom: 5px;
+}
+
 ul.sidebar_menu li {
     float:left;
     margin: 5px 5px 0px 5px;
+}
+
+ul.sidebar_menu li.seperate {
+    border: none;
+    padding-top:0px;
+    width:auto;
+    border-left: 1px solid #3D681A;
+    padding-left: 10px;
+}
+
+ul.sidebar_menu li,
+ul.sidebar_menu li a{
+    font-size: 12px;
 }
 div.icon {
     width:69px;
