--- a/app/views/friend_relations/index.html.erb
+++ b/app/views/friend_relations/index.html.erb
@@ -1,6 +1,11 @@
-<div class="sect">
+<div id="wide_left_content" class="sect">
   <h2><%= h @title%></h2>
   <%= render(:partial => 'shared/user_icon', :collection => @friendsList)%>
+</div>
+
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <%=render :partial=>'sidebar_menus/user_view_friend'%>
 </div>
 <div class="clearBoth"></div>
 
