--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,10 +1,6 @@
 <div id="narrow_right_content" class="sect">
-<h2></h2>
-<ul class="sidebar_menu">
-  <li>
-  > <%= link_to_if(params[:as]=='sender', '去收件箱', messages_path) { link_to '去发件箱', messages_path(:as => 'sender') } %>
-  </li>
-</ul>
+  <h2></h2>
+  <%=render :partial=>'sidebar_menu'%>
 </div>
 
 <div id="wide_left_content" class="sect">
