--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,14 +11,6 @@
 
 <div id="narrow_right_content" class="sect">
   <h2></h2>
-  <ul class="sidebar_menu">
-    <li>
-      > <% if @training %>
-        <%= link_to '返回讨论区', training_posts_path(@training) %>
-      <% elsif @team %>
-        <%= link_to '返回讨论区', team_posts_path(@team) %>
-      <%end%>
-    </li>
-  </ul>
+  <%=render :partial=>'sidebar_menu'%>
 </div>
 <div class="clearBoth"></div>
