--- a/app/views/shared/_highlight_calendar.html.erb
+++ b/app/views/shared/_highlight_calendar.html.erb
@@ -6,7 +6,7 @@
   <%end%>
   <div class="normalDateDiv bigDateDiv <%= tmp_length > 2 ? 'hasManyActivitiesDiv' : (tmp_length > 0 ? 'hasActivityDiv' : '')%>">
     <div class="bigMonthDayDiv">
-      <span class="bigMonthDaySpan"><%=month_day_link(date.day, date)%></span>
+      <span class="bigMonthDaySpan"><%=day_calendar_link(date.day, date, @user || @team)%></span>
       <span class="bigWeekDaySpan"><%=wday_text date.wday%></span>
     </div>
     <div class="dateContent">
@@ -19,13 +19,13 @@
           <%= link_to '训练', training_view_path(t)%>
         </div>
       <%end%>
-      <%= month_day_link(">> 更多", date, :class=>"more") if dts.length > 3%>
+      <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if dts.length > 3%>
       <%end%>
     </div>
   </div>
   <%if i==1%>
     <div class="normalDateDiv monthAndYearDiv">
-      <%= month_calendar_link(date.strftime("%Y-%m"), date)%>
+      <%= month_calendar_link(date.strftime("%Y-%m"), date, @user || @team)%>
     </div>
   <%end%>
   <% date = date.tomorrow %>
@@ -37,7 +37,7 @@
     <%end%>
     <div class="normalDateDiv <%= tmp_length > 3 ? 'hasManyActivitiesDiv' : (tmp_length > 0 ? 'hasActivityDiv' : '')%>">
       <div class="bigMonthDayDiv">
-        <span class="bigMonthDaySpan"><%=month_day_link(date.day, date)%></span>
+        <span class="bigMonthDaySpan"><%=day_calendar_link(date.day, date, @user || @team)%></span>
         <span class="bigWeekDaySpan"><%=wday_text date.wday%></span>
       </div>
       <div class="dateContent">
@@ -48,7 +48,7 @@
             <%= link_to image_tag('training_icon.gif'), training_view_path(t)%>
           </span>
         <%end%>
-        <%= month_day_link(">> 更多", date, :class=>"more") if dts.length > 6%>
+        <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if dts.length > 6%>
         <%end%>
       </div>
     </div>
