--- a/app/views/team_join_invitations/index_team.html.erb
+++ b/app/views/team_join_invitations/index_team.html.erb
@@ -31,13 +31,6 @@
 
 <div id="narrow_right_content" class="sect">
   <h2></h2>
-  <ul class="sidebar_menu">
-    <li>
-    > <%= link_to("希望和我成为朋友的用户", friend_invitations_path) %>
-    </li>
-    <li>
-    > <%= link_to("我申请加入的球队", team_join_requests_path) %>
-    </li>
-  </ul>
+  <%=render :partial=>'sidebar_menus/user_view_team'%>
 </div>
 <div class="clearBoth"></div>
