--- a/app/views/team_join_invitations/new_by_user_id.html.erb
+++ b/app/views/team_join_invitations/new_by_user_id.html.erb
@@ -1,4 +1,4 @@
-<div class="sect">
+<div id="wide_left_content" class="sect">
 <h2><%=h @title%></h2>
 <%if @teams.empty?%>
   <span>没有可以邀请加入的球队，可能这个用户已经加入了所有你管理的球队</span>
@@ -20,3 +20,14 @@
   <% end %>
 <%end%>
 </div>
+
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to "返回个人首页", user_view_path(@user) %>
+    </li>
+  </ul>
+</div>
+
+<div class="clearBoth"></div>
