--- a/app/views/team_join_requests/index_user.html.erb
+++ b/app/views/team_join_requests/index_user.html.erb
@@ -31,10 +31,6 @@
 
 <div id="narrow_right_content" class="sect">
   <h2></h2>
-  <ul class="sidebar_menu">
-    <li>
-    > <%= link_to("球队邀请加入的用户", team_team_join_invitations_path(@team)) %>
-    </li>
-  </ul>
+  <%=render :partial=>'sidebar_menus/team_view_team_join_request'%>
 </div>
 <div class="clearBoth"></div>
