--- a/app/views/team_joins/player_management.html.erb
+++ b/app/views/team_joins/player_management.html.erb
@@ -1,6 +1,6 @@
 <div id="narrow_right_content" class="sect">
   <h2></h2>
-  <%=render :partial=>'sidebar_menu'%>
+  <%=render :partial=>'sidebar_menus/team_view_team_and_management'%>
 </div>
 
 <div id="wide_left_content">
