--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -25,3 +25,13 @@
   </div>
 </div>
 
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to '返回队伍首页', team_view_path(@team) %>
+    </li>
+  </ul>
+</div>
+
+<div class="clearBoth"></div>
