--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -8,3 +8,10 @@
   <p><%= submit_tag '创建' %></p>
   <% end -%>
 </div>
+
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <%=render :partial=>'sidebar_menus/user_view_team'%>
+</div>
+  
+<div class="clearBoth"></div>
