--- a/app/views/trainings/edit.html.erb
+++ b/app/views/trainings/edit.html.erb
@@ -8,3 +8,14 @@
   <p><%= submit_tag '更新' %></p>
   <% end %>
 </div>
+
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to "返回训练首页", training_view_path(@training) %>
+    </li>
+  </ul>
+</div>
+  
+<div class="clearBoth"></div>
