--- a/app/views/team_joins/formation_management.html.erb
+++ b/app/views/team_joins/formation_management.html.erb
@@ -2,6 +2,7 @@
   <%= javascript_include_tag "jquery.dimensions.js" %>
   <%= javascript_include_tag "ui.mouse.js" %>
   <%= javascript_include_tag "ui.draggable.js" %>
+  <%= javascript_include_tag "ui.draggable.ext.js" %>
   <%= javascript_include_tag "ui.droppable.js" %>
   <%= javascript_include_tag "ui.droppable.ext.js" %>
   <%= javascript_include_tag "formation.js" %>
