--- a/app/views/match_invitations/new.html.erb
+++ b/app/views/match_invitations/new.html.erb
@@ -1,74 +1,105 @@
-<div>
-  <h1><%=@host_team.shortname%> V.S. <%=@guest_team.shortname%></h1>
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to "重新选择发起邀请的球队", new_match_invitation_path(:guest_team_id => @guest_team.id) %>
+    </li>
+    <li class="seperate">
+      > <%= link_to "返回#{h @host_team.shortname}首页", team_view_path(@host_team) %>
+    </li>
+    <li>
+      > <%= link_to "返回#{h @guest_team.shortname}首页", team_view_path(@guest_team) %>
+    </li>
+  </ul>
 </div>
 
-<%= error_messages_for :match_invitation %>
+<div id="wide_left_content" class="sect">
+  <h2><%= h @title%></h2>
+  <%= error_messages_for :match_invitation %>
 
-<% form_for @match_invitation do |f| %>
-  <%= f.hidden_field :guest_team_id,  :value=>@guest_team.id%>
-  <%= f.hidden_field :host_team_id,  :value=>@host_team.id%>    
-  
-  <p>
-    <b>开始时间</b><br />
-    <%= f.datetime_select :new_start_time %>
-  </p>
+  <% form_for @match_invitation do |f| %>
+    <%= f.hidden_field :guest_team_id,  :value=>@guest_team.id%>
+    <%= f.hidden_field :host_team_id,  :value=>@host_team.id%>
+    <table class="form">
+      <tr><td>
+        发起队:
+      </td><td>
+        <%= small_team_image_link @host_team, :style=>"float:left;margin-right:10px"%>
+        <br/>
+        <span><%=link_to h(@host_team.shortname), team_view_path(@host_team.id)%></span>
+      </td></tr>
+      <tr ><td>
+        受邀队:
+      </td><td>
+        <%= small_team_image_link @guest_team, :style=>"float:left;margin-right:10px"%>
+        <br/>
+        <span><%=link_to h(@guest_team.shortname), team_view_path(@guest_team.id)%></span>
+      </td></tr>
+      <tr><td>
+        开始时间:
+      </td><td>
+        <%= f.datetime_select :new_start_time,  :start_year => Date.today.year, :end_year => 1.year.since.year, :use_month_numbers => true, :minute_step=>15 %>
+      </td></tr>
+      <tr><td>
+        地点:
+      </td><td>
+        <%= f.text_field :new_location %>
+      </td></tr>
+      <tr><td>
+        比赛性质:
+      </td><td>
+        <%= f.select :new_match_type, MatchInvitation::MATCH_TYPES.map {|t| [match_type_text(t), t]} %> 
+      </td></tr>
+      <tr><td>
+        人数:
+      </td><td>
+        <%= f.select :new_size, MatchInvitation::MATCH_SIZES %>人制 
+      </td></tr>
+      <tr><td>
+        半场时间:
+      </td><td>
+        <%= f.text_field :new_half_match_length, :size=>1 %>分钟 
+      </td></tr>
+      <tr><td>
+        中场休息:
+      </td><td>
+        <%= f.text_field :new_rest_length, :size=>1 %>分钟
+      <tr><td>
+        是否有裁判:
+      </td><td>
+        <%= f.check_box :new_has_judge %>
+      </td></tr>
+      <tr><td>
+        是否有红黄牌:
+      </td><td>
+        <%= f.check_box :new_has_card %> 
+      </td></tr>
+      <tr><td>
+        是否有越位:
+      </td><td>
+        <%= f.check_box :new_has_offside %>
+      </td></tr>
+      <tr><td>
+        常规时间平局后:
+      </td><td>
+        <%= f.select :new_win_rule, MatchInvitation::WIN_RULES.map {|r| [win_rule_text(r), r]} %>
+      </td></tr>
+    </table>
 
-  <p>
-    <b>地点</b><br />
-    <%= f.text_field :new_location %>
-  </p>
+    <p>
+      比赛说明<br />
+      <%= f.text_area :new_description, :cols => 40, :rows => 10 %>
+    </p>
 
-  <p>
-    <b>简要介绍</b><br />
-    <%= f.text_area :new_description %>
-  </p>  
-  
-  <p>
-    <b>比赛类型</b><br />
-    <%= f.select :new_match_type, MatchInvitation::MATCH_TYPES.map {|t| [match_type_text(t), t]} %>
-  </p>
+    <p>
+      给对方管理员的留言<br />
+      <%= f.text_area :host_team_message, :cols => 40, :rows => 3 %>
+    </p>
 
-  <p>
-    <b>参加人数</b><br />
-    <%= f.select :new_size, MatchInvitation::MATCH_SIZES %>
-  </p>
+    <p>
+      <%= f.submit "创建邀请" %>
+    </p>
+  <% end %>
+</div>
 
-  <p>
-    <b>有裁判</b><br />
-    <%= f.check_box :new_has_judge %>
-  </p>
-
-  <p>
-    <b>有红黄牌</b><br />
-    <%= f.check_box :new_has_card %>
-  </p>
-
-  <p>
-    <b>有越位</b><br />
-    <%= f.check_box :new_has_offside %>
-  </p>
-
-  <p>
-    <b>上下半场各</b><br />
-    <%= f.text_field :new_half_match_length %>分钟
-  </p>
-
-  <p>
-    <b>中场休息</b><br />
-    <%= f.text_field :new_rest_length %>分钟
-  </p>  
-  
-  <p>
-    <b>决胜规则</b><br />
-    <%= f.select :new_win_rule, MatchInvitation::WIN_RULES.map {|r| [win_rule_text(r), r]} %>
-  </p>
-
-  <p>
-    <b>留言</b><br />
-    <%= f.text_area :host_team_message %>
-  </p>
-
-  <p>
-    <%= f.submit "创建邀请" %>
-  </p>
-<% end %>
+<div class="clearBoth"></div>
